K8sMultiTenantOperator/source/templates/yamls/template-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:    
    group: template-group
  name: template-ingress
  namespace: template-ns
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"    
spec:
  # tls:
  # - hosts:
  #   - https-example.foo.com
  #   secretName: testsecret-tls
  rules:
  - host: template-host
    http:
      paths:
      - path: template-path
        backend:
          serviceName: template-svc
          servicePort: 80
