K8sMultiTenantOperator/source/templates/yamls/template-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    group: template-group
  name: template-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: {}
  egress: {}
